--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "firebase": "9.6.1",
+    "firebase": "7.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
